force-app/main/default/objects/Financial_Entity_AC_Detail__c/Financial_Entity_AC_Detail__c.object-meta.xml
<CustomObject>
    <label>Financial Entity AC Detail</label>
    <nameField>
        <label>Financial Entity AC Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Entity AC Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>