force-app/main/default/objects/Financial_Entity_AC_Detail__c/fields/Banking_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Banking_Account_Name__c</fullName>
    <label>Banking Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>