force-app/main/default/objects/Financial_Entity_AC_Detail__c/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <label>BatchId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>