force-app/main/default/objects/Financial_Entity_AC_Detail__c/fields/Financial_Entity__c.field-meta.xml
<CustomField>
    <fullName>Financial_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Entity</label>
    <referenceTo>Financial_Entity__c</referenceTo>
    <relationshipLabel>Financial Entity AC Details</relationshipLabel>
    <relationshipName>Financial_Entity_AC_Details</relationshipName>
    <type>Lookup</type>
</CustomField>