force-app/main/default/objects/Financial_Entity_AC_Detail__c/fields/isChanged__c.field-meta.xml
<CustomField>
    <fullName>isChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isChanged</label>
    <type>Checkbox</type>
</CustomField>