force-app/main/default/objects/Financial_Entity_AC_Detail__c/fields/Physically_verified__c.field-meta.xml
<CustomField>
    <fullName>Physically_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physically verified</label>
    <type>Checkbox</type>
</CustomField>